typescript/checker/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts.stderr
error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            161,
        ),
        hi: BytePos(
            163,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:7:5
  |
7 | var a2: boolean;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            178,
        ),
        hi: BytePos(
            180,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:8:5
  |
8 | var a3: number
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            193,
        ),
        hi: BytePos(
            195,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:9:5
  |
9 | var a4: string;
  |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            209,
        ),
        hi: BytePos(
            211,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:10:5
   |
10 | var a5: void;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            223,
        ),
        hi: BytePos(
            225,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:11:5
   |
11 | var a6: E;
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            234,
        ),
        hi: BytePos(
            236,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:12:5
   |
12 | var a7: {};
   |     ^^

error: ShouldIncludeUndefinedType {
    span: Span {
        lo: BytePos(
            246,
        ),
        hi: BytePos(
            248,
        ),
        ctxt: #0,
    },
}
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:13:5
   |
13 | var a8: string[];
   |     ^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:70:11
   |
70 | var rf1 = a1 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:71:11
   |
71 | var rf2 = a2 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:72:11
   |
72 | var rf3 = a3 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:73:11
   |
73 | var rf4 = a4 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:74:11
   |
74 | var rf5 = a5 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:75:11
   |
75 | var rf6 = a6 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:76:11
   |
76 | var rf7 = a7 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:77:11
   |
77 | var rf8 = a8 && a6;
   |           ^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:78:11
   |
78 | var rf9 = null && a6;
   |           ^^^^^^^^^^

error: unimplemented
expand_export_info(E)
File: $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts
  --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:79:12
   |
79 | var rf10 = undefined && a6;
   |            ^^^^^^^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2196,
        ),
        hi: BytePos(
            2205,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:114:17
    |
114 | var rj1 = a1 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2223,
        ),
        hi: BytePos(
            2232,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:115:17
    |
115 | var rj2 = a2 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2250,
        ),
        hi: BytePos(
            2259,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:116:17
    |
116 | var rj3 = a3 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2277,
        ),
        hi: BytePos(
            2286,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:117:17
    |
117 | var rj4 = a4 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2304,
        ),
        hi: BytePos(
            2313,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:118:17
    |
118 | var rj5 = a5 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2331,
        ),
        hi: BytePos(
            2340,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:119:17
    |
119 | var rj6 = a6 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2358,
        ),
        hi: BytePos(
            2367,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:120:17
    |
120 | var rj7 = a7 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2385,
        ),
        hi: BytePos(
            2394,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:121:17
    |
121 | var rj8 = a8 && undefined;
    |                 ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2414,
        ),
        hi: BytePos(
            2423,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:122:19
    |
122 | var rj9 = null && undefined;
    |                   ^^^^^^^^^

error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            2449,
        ),
        hi: BytePos(
            2458,
        ),
        ctxt: #0,
    },
}
   --> $DIR/tests/conformance/expressions/binaryOperators/logicalAndOperator/logicalAndOperatorWithEveryType.ts:123:25
    |
123 | var rj10 = undefined && undefined;
    |                         ^^^^^^^^^

